--- a/frontend/error.html
+++ b/frontend/error.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Page Not Found</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
   <nav>
